# dfl

./: .gitignore  Cargo.toml  tst.dfl  tst2.dfl  tst3.dfl
examples/: bfs_reduced.dfl  bv.dfl  bv_infer.dfl  conditional_store.dfl  conditional_store_infer.dfl  inference.dfl  pipeline.dfl  pipeline_bv.dfl  pipeline_bv_indirect.dfl  pipeline_bv_indirect_infer.dfl  pipeline_bv_infer.dfl  pipeline_inference.dfl  ref.dfl  ref_canon.dfl  ref_infer.dfl  ref_inference.dfl  test_1.dfl  test_2.dfl  test_3.dfl
src/: ast.rs  check.rs  dfl.lalrpop  error.rs  main.rs  permission.rs  permissions.rs  riptide.rs  smt.rs  span.rs  syntax.lalrpop
