[package]
name = "dfl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.15.1"
im = "15.1.0"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.20.2"
