[package]
name = "dfl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
im = "15.1.0"
indexmap = "2.2.6"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
wait-timeout = "0.2.0"

[build-dependencies]
lalrpop = "0.20.2"
